--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
             align-items: center;
             justify-content: flex-start;
             height: 100vh;
-            background-color: #f4f4f4;
+            background-color: #eee2e2ea;
         }
 
         .logo {
