--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
         <video id="live-video" class="video-js vjs-default-skin" controls preload="auto" autoplay muted>
             <source src="rtmp://your-rtmp-server/live/stream" type="rtmp/mp4">
             <!-- You can also provide a fallback source if RTMP is not supported -->
-            <source src="https://sstv.ssplay.mv/hls/sstv-live/index.m3u8" type="application/x-mpegURL">
+            <source src="https://stream.raajje.mv/live/rtv_live/index.m3u8" type="application/x-mpegURL">
             Your browser does not support the video tag.
         </video>
     </div>
